--- a/crates/icn_core/cargo.toml
+++ b/crates/icn_core/cargo.toml
@@ -10,7 +10,14 @@ icn_currency = { path = "../icn_currency" }
 icn_governance = { path = "../icn_governance" }
 icn_identity = { path = "../icn_identity" }
 icn_network = { path = "../icn_network" }
-icn_node = { path = "../icn_node" }
 icn_sharding = { path = "../icn_sharding" }
 icn_vm = { path = "../icn_vm" }
+log = "0.4"
+env_logger = "0.9"
+chrono = { version = "0.4", features = ["serde"] }
 thiserror = "1.0"
+ed25519-dalek = "1.0"
+rand = "0.7"
+
+[dev-dependencies]
+tokio = { version = "1.0", features = ["full"] }
