--- a/crates/icn_api/Cargo.toml
+++ b/crates/icn_api/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-icn_blockchain = { path = "../icn_blockchain" }
-icn_governance = { path = "../icn_governance" }
-icn_currency = { path = "../icn_currency" }
 icn_core = { path = "../icn_core" }
+icn_blockchain = { path = "../icn_blockchain" }
+icn_consensus = { path = "../icn_consensus" }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
-chrono = { version = "0.4", features = ["serde"] }
+log = "0.4"
+thiserror = "1.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
