--- a/crates/icn_smart_contract/Cargo.toml
+++ b/crates/icn_smart_contract/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "icn_storage"
+name = "icn_smart_contract"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,7 +9,6 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
 thiserror = "1.0"
-sha2 = "0.9"
 
 [dev-dependencies]
 tokio-test = "0.4"
