--- a/crates/icn_consensus/Cargo.toml
+++ b/crates/icn_consensus/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-icn_core = { path = "../icn_core" }
+icn_common = { path = "../icn_common" }
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 thiserror = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
+sha2 = "0.9.9"
 
 [dev-dependencies]
 tokio-test = "0.4"
