--- a/crates/icn_blockchain/Cargo.toml
+++ b/crates/icn_blockchain/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-icn_common = { path = "../icn_common" }
-icn_consensus = { path = "../icn_consensus" }
 serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1.0", features = ["full"] }
-log = "0.4"
-thiserror = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
+sha2 = "0.9"
+ed25519-dalek = "1.0"
+rand = "0.7"
+uuid = { version = "0.8", features = ["v4"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
