--- a/crates/icn_blockchain/Cargo.toml
+++ b/crates/icn_blockchain/Cargo.toml
@@ -1,9 +1,7 @@
-[package]
-name = "icn_blockchain"
-version = "0.1.0"
-edition = "2021"
+
 
 [dependencies]
+icn_utils = { path = "../icn_utils" }
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 sha2 = "0.9"
