--- a/crates/icn_utils/Cargo.toml
+++ b/crates/icn_utils/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
+sha2 = "0.9"
+ed25519-dalek = "1.0"
+rand = "0.7"
+thiserror = "1.0"
+serde_json = "1.0"
