Enter your commit message: removed icn_common, moved code into icn_util.

--- a/crates/icn_api/Cargo.toml
+++ b/crates/icn_api/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+icn_utils = { path = "../icn_utils" }
 icn_core = { path = "../icn_core" }
 icn_blockchain = { path = "../icn_blockchain" }
 icn_consensus = { path = "../icn_consensus" }
