--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ members = [
     "crates/icn_sharding",
     "crates/icn_storage",
     "crates/icn_testnet",
+    "crates/icn_utils",
     "crates/icn_vm",
-    "crates/icn_utils"
 ]
+
 resolver = "2"
