--- a/crates/icn_consensus/Cargo.toml
+++ b/crates/icn_consensus/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 thiserror = "1.0"
-icn_core = { path = "../icn_core" }
+icn_utils = { path = "../icn_utils" }
+chrono = "0.4"
+sha2 = "0.9"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full"] }
