--- a/crates/icn_currency/Cargo.toml
+++ b/crates/icn_currency/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-icn_core = { path = "../icn_core" }
 serde = { version = "1.0", features = ["derive"] }
-chrono = { version = "0.4", features = ["serde"] }
+icn_utils = { path = "../icn_utils" }
 log = "0.4"
 thiserror = "1.0"
-uuid = { version = "0.8", features = ["v4"] }
+chrono = "0.4"
+sha2 = "0.9"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full"] }
