--- a/crates/icn_utils/Cargo.toml
+++ b/crates/icn_utils/Cargo.toml
@@ -1,3 +1,5 @@
+# File: icn_utils/Cargo.toml
+
 [package]
 name = "icn_utils"
 version = "0.1.0"
@@ -12,3 +14,5 @@ rand = "0.7"
 thiserror = "1.0"
 serde_json = "1.0"
 bincode = "1.3"
+hex = "0.4"  # Ensure the hex crate is included
+icn_types = { path = "../icn_types" }  # Ensure icn_types is included
