Enter your commit message: Fixing the core crate and implementing main.rs

--- a/crates/icn_core/Cargo.toml
+++ b/crates/icn_core/Cargo.toml
@@ -13,6 +13,8 @@ ed25519-dalek = "1.0"
 rand = "0.7"
 icn_utils = { path = "../icn_utils" }
 icn_types = { path = "../icn_types" }  # Add this line
+log = "0.4"
+env_logger = "0.9"
 
 [dev-dependencies]
 tokio-test = "0.4"
