--- a/crates/icn_blockchain/Cargo.toml
+++ b/crates/icn_blockchain/Cargo.toml
@@ -12,6 +12,7 @@ ed25519-dalek = "1.0"
 rand = "0.7"
 uuid = { version = "0.8", features = ["v4"] }
 serde_json = "1.0"
+icn_types = { path = "../icn_types" }
 
 [dev-dependencies]
 tokio-test = "0.4"
