Refactor to resolve cyclic dependencies by utilizing icn_common crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ members = [
     "crates/icn_api",
     "crates/icn_testnet",
     "crates/icn_types",
-    "crates/icn_core",
+    "crates/icn_core", "crates/icn_common",
 ]
 
 
