--- a/crates/icn_common/Cargo.toml
+++ b/crates/icn_common/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
