--- a/crates/icn_utils/Cargo.toml
+++ b/crates/icn_utils/Cargo.toml
@@ -14,5 +14,8 @@ rand = "0.7"
 thiserror = "1.0"
 serde_json = "1.0"
 bincode = "1.3"
-hex = "0.4"  # Ensure the hex crate is included
-icn_types = { path = "../icn_types" }  # Ensure icn_types is included
+hex = "0.4"
+icn_common = { path = "../icn_common" }  # Changed from icn_types to icn_common
+
+[dev-dependencies]
+serde_json = "1.0"
