--- a/crates/icn_sharding/Cargo.toml
+++ b/crates/icn_sharding/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-icn_core = { path = "../icn_core" }
+icn_types = { path = "../icn_types" }
+icn_common = { path = "../icn_common" }
 icn_blockchain = { path = "../icn_blockchain" }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
@@ -13,6 +14,9 @@ thiserror = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 rand = "0.8"
 sha2 = "0.9"
+
+# Remove the dependency on icn_core
+# icn_core = { path = "../icn_core" }
 
 [dev-dependencies]
 tokio-test = "0.4"
