--- a/crates/icn_utils/Cargo.toml
+++ b/crates/icn_utils/Cargo.toml
@@ -15,7 +15,7 @@ thiserror = "1.0"
 serde_json = "1.0"
 bincode = "1.3"
 hex = "0.4"
-icn_common = { path = "../icn_common" }  # Changed from icn_types to icn_common
+icn_types = { path = "../icn_types" }  # Corrected dependency from icn_common to icn_types
 
 [dev-dependencies]
 serde_json = "1.0"
