--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-# File: Cargo.toml
-
 [workspace]
 members = [
     "crates/icn_utils",
@@ -14,7 +12,7 @@ members = [
     "crates/icn_vm",
     "crates/icn_api",
     "crates/icn_testnet",
-    "crates/icn_types",
+    "crates/icn_common_types",
     "crates/icn_core", 
     "crates/icn_common",
 ]
