--- a/crates/icn_common_types/Cargo.toml
+++ b/crates/icn_common_types/Cargo.toml
@@ -1,8 +1,5 @@
-# File: icn_types/Cargo.toml
-
-
 [package]
-name = "icn_types"
+name = "icn_common_types"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,4 +8,3 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 chrono = "0.4"
 serde_json = "1.0"
-
