--- a/crates/icn_consensus/Cargo.toml
+++ b/crates/icn_consensus/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+icn_common_types = { path = "../icn_common_types" }
+icn_common = { path = "../icn_common" }
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 thiserror = "1.0"
-icn_utils = { path = "../icn_utils" }
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+rand = "0.8"
 sha2 = "0.9"
 
 [dev-dependencies]
