--- a/crates/icn_core/Cargo.toml
+++ b/crates/icn_core/Cargo.toml
@@ -4,24 +4,20 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1.0", features = ["full"] }
-log = "0.4"
-thiserror = "1.0"
-chrono = { version = "0.4", features = ["serde"] }
-ed25519-dalek = "1.0"
-rand = "0.7"
-icn_utils = { path = "../icn_utils" }
-icn_types = { path = "../icn_types" }
+icn_common_types = { path = "../icn_common_types" }
+icn_common = { path = "../icn_common" }
 icn_blockchain = { path = "../icn_blockchain" }
 icn_consensus = { path = "../icn_consensus" }
 icn_currency = { path = "../icn_currency" }
 icn_governance = { path = "../icn_governance" }
+icn_identity = { path = "../icn_identity" }
+icn_network = { path = "../icn_network" }
+icn_sharding = { path = "../icn_sharding" }
 icn_vm = { path = "../icn_vm" }
-icn_common = { path = "../icn_common" }
-
-# Remove the dependency on icn_storage
-# icn_storage = { path = "../icn_storage" }
+tokio = { version = "1.0", features = ["full"] }
+log = "0.4"
+thiserror = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
