--- a/crates/icn_network/Cargo.toml
+++ b/crates/icn_network/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-icn_types = { path = "../icn_types" }
+icn_common_types = { path = "../icn_common_types" }
 icn_common = { path = "../icn_common" }
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
