--- a/crates/icn_vm/Cargo.toml
+++ b/crates/icn_vm/Cargo.toml
@@ -9,7 +9,7 @@ tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
 thiserror = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-icn_types = { path = "../icn_types" }
+icn_common_types = { path = "../icn_common_types" }
 
 [dev-dependencies]
 tokio-test = "0.4"
