--- a/crates/icn_api/Cargo.toml
+++ b/crates/icn_api/Cargo.toml
@@ -9,13 +9,11 @@ icn_utils = { path = "../icn_utils" }
 icn_common_types = { path = "../icn_common_types" }
 icn_blockchain = { path = "../icn_blockchain" }
 icn_consensus = { path = "../icn_consensus" }
+icn_core = { path = "../icn_core" }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
 thiserror = "1.0"
-
-# Remove the direct dependency on icn_core
-# icn_core = { path = "../icn_core" }
 
 [dev-dependencies]
 tokio-test = "0.4"
