--- a/crates/icn_blockchain/Cargo.toml
+++ b/crates/icn_blockchain/Cargo.toml
@@ -4,15 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-icn_common_types = { path = "../icn_common_types" }
 icn_common = { path = "../icn_common" }
-serde = { version = "1.0", features = ["derive"] }
-chrono = { version = "0.4", features = ["serde"] }
+serde = { workspace = true }
+chrono = { workspace = true }
 sha2 = "0.9"
 ed25519-dalek = "1.0"
 rand = "0.7"
-log = "0.4"
-thiserror = "1.0"
+log = { workspace = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
