Enter your commit message: Almost done refactoring...

--- a/crates/icn_blockchain/Cargo.toml
+++ b/crates/icn_blockchain/Cargo.toml
@@ -5,12 +5,10 @@ edition = "2021"
 
 [dependencies]
 icn_common = { path = "../icn_common" }
-serde = { workspace = true }
-chrono = { workspace = true }
+serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
 sha2 = "0.9"
-ed25519-dalek = "1.0"
-rand = "0.7"
-log = { workspace = true }
+log = "0.4"
 
 [dev-dependencies]
 tokio-test = "0.4"
