--- a/crates/icn_common/Cargo.toml
+++ b/crates/icn_common/Cargo.toml
@@ -1,10 +1,23 @@
 [package]
-name = "icn_common"
+name = "icn_core"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { workspace = true }
-chrono = { workspace = true }
-thiserror = { workspace = true }
-log = { workspace = true }
+icn_common = { path = "../icn_common" }
+icn_blockchain = { path = "../icn_blockchain" }
+icn_consensus = { path = "../icn_consensus" }
+icn_currency = { path = "../icn_currency" }
+icn_governance = { path = "../icn_governance" }
+icn_identity = { path = "../icn_identity" }
+icn_network = { path = "../icn_network" }
+icn_sharding = { path = "../icn_sharding" }
+icn_storage = { path = "../icn_storage" }
+icn_vm = { path = "../icn_vm" }
+tokio = { version = "1.0", features = ["full"] }
+log = "0.4"
+thiserror = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+
+[dev-dependencies]
+tokio-test = "0.4"
