--- a/crates/icn_currency/Cargo.toml
+++ b/crates/icn_currency/Cargo.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+icn_common = { path = "../icn_common" }
 serde = { version = "1.0", features = ["derive"] }
-icn_utils = { path = "../icn_utils" }
 log = "0.4"
 thiserror = "1.0"
-chrono = "0.4"
-sha2 = "0.9"
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full"] }
