--- a/crates/icn_testnet/Cargo.toml
+++ b/crates/icn_testnet/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-icn_core = { path = "../icn_core" }
+icn_common = { path = "../icn_common" }
 icn_blockchain = { path = "../icn_blockchain" }
 icn_consensus = { path = "../icn_consensus" }
 icn_currency = { path = "../icn_currency" }
@@ -12,7 +12,10 @@ icn_governance = { path = "../icn_governance" }
 icn_identity = { path = "../icn_identity" }
 icn_network = { path = "../icn_network" }
 icn_sharding = { path = "../icn_sharding" }
+icn_storage = { path = "../icn_storage" }
 icn_vm = { path = "../icn_vm" }
+icn_core = { path = "../icn_core" }
+icn_api = { path = "../icn_api" }
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
 env_logger = "0.9"
