--- a/crates/icn_vm/Cargo.toml
+++ b/crates/icn_vm/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+icn_common = { path = "../icn_common" }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
 thiserror = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-icn_common_types = { path = "../icn_common_types" }
 
 [dev-dependencies]
 tokio-test = "0.4"
