--- a/crates/icn_common/Cargo.toml
+++ b/crates/icn_common/Cargo.toml
@@ -1,23 +1,17 @@
 [package]
-name = "icn_core"
+name = "icn_common"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-icn_common = { path = "../icn_common" }
-icn_blockchain = { path = "../icn_blockchain" }
-icn_consensus = { path = "../icn_consensus" }
-icn_currency = { path = "../icn_currency" }
-icn_governance = { path = "../icn_governance" }
-icn_identity = { path = "../icn_identity" }
-icn_network = { path = "../icn_network" }
-icn_sharding = { path = "../icn_sharding" }
-icn_storage = { path = "../icn_storage" }
-icn_vm = { path = "../icn_vm" }
-tokio = { version = "1.0", features = ["full"] }
-log = "0.4"
-thiserror = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
+thiserror = "1.0"
+sha2 = "0.9"
+ed25519-dalek = "1.0"
+log = "0.4"
 
 [dev-dependencies]
+rand = "0.8"
+tokio = { version = "1.0", features = ["full"] }
 tokio-test = "0.4"
