--- a/crates/icn_common/Cargo.toml
+++ b/crates/icn_common/Cargo.toml
@@ -1,17 +1,21 @@
 [package]
 name = "icn_common"
 version = "0.1.0"
-edition = "2021"
+authors = ["Your Name <your.email@example.com>"]
+edition = "2018"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4"
 serde = { version = "1.0", features = ["derive"] }
-chrono = { version = "0.4", features = ["serde"] }
-thiserror = "1.0"
+serde_json = "1.0"
 sha2 = "0.9"
+rand = "0.8"
+rand_chacha = "0.3"
 ed25519-dalek = "1.0"
-log = "0.4"
+thiserror = "1.0"
 
 [dev-dependencies]
 rand = "0.8"
-tokio = { version = "1.0", features = ["full"] }
-tokio-test = "0.4"
+rand_chacha = "0.3"
