--- a/crates/icn_zkp/Cargo.toml
+++ b/crates/icn_zkp/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "icn_blockchain"
+name = "icn_zkp"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 icn_common = { path = "../icn_common" }
+bellman = "0.11.0"
+bls12_381 = "0.6.0"
+rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
-chrono = { version = "0.4", features = ["serde"] }
-sha2 = "0.10"
-log = "0.4"
 thiserror = "1.0"
 
 [dev-dependencies]
-tokio-test = "0.4"
+criterion = "0.3"
