--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
     "crates/icn_vm",
     "crates/icn_api",
     "crates/icn_testnet",
-    "crates/icn_core", "crates/icn_zkp", "icn_smart_contracts",
+    "crates/icn_core", "crates/icn_zkp", "icn_smart_contracts", "icn_reputation",
 ]
 
 resolver = "2"
