Enter your commit message: added new crates, added quadratic voting system

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,10 @@ members = [
     "crates/icn_vm",
     "crates/icn_api",
     "crates/icn_testnet",
-    "crates/icn_core", "crates/icn_zkp", "icn_smart_contracts", "icn_reputation",
+    "crates/icn_core", 
+    "crates/icn_zkp", 
+    "crates/icn_smart_contracts",
+    "crates/icn_reputation", "crates/icn_market", "crates/icn_incentives",
 ]
 
 resolver = "2"
