Enter your commit message: modified api again, fixes cargo files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ members = [
     "crates/icn_core", 
     "crates/icn_zkp", 
     "crates/icn_smart_contracts",
-    "crates/icn_reputation", "crates/icn_market", "crates/icn_incentives",
+    "crates/icn_reputation",
+    "crates/icn_market",
+    "crates/icn_incentives",
 ]
 
 resolver = "2"
