--- a/crates/icn_vm/Cargo.toml
+++ b/crates/icn_vm/Cargo.toml
@@ -1,3 +1,5 @@
+# File: /home/matt/InterCooperative-Network/crates/icn_vm/Cargo.toml
+
 [package]
 name = "icn_vm"
 version = "0.1.0"
@@ -5,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 icn_common = { path = "../icn_common" }
-serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1.0", features = ["full"] }
-log = "0.4"
-thiserror = "1.0"
-chrono = { version = "0.4", features = ["serde"] }
+icn_language = { path = "../icn_language" }  # Add this line
+serde = { workspace = true }
+tokio = { workspace = true }
+log = { workspace = true }
+thiserror = { workspace = true }
+chrono = { workspace = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
