--- a/crates/icn_market/Cargo.toml
+++ b/crates/icn_market/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+chrono = "0.4"
+ed25519-dalek = "1.0"
+rand = "0.8"
+bitvec = { path = "../../vendor/bitvec" }
+funty = { path = "../../vendor/funty" }
