--- a/crates/icn_zkp/Cargo.toml
+++ b/crates/icn_zkp/Cargo.toml
@@ -4,12 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-icn_common = { path = "../icn_common" }
-bellman = "0.11.0"
-bls12_381 = "0.6.0"
-rand = "0.8"
+bellman = "0.11.1"
 serde = { version = "1.0", features = ["derive"] }
-thiserror = "1.0"
-
-[dev-dependencies]
-criterion = "0.3"
+chrono = "0.4"
+ed25519-dalek = "1.0"
+rand = "0.8"
+bitvec = { path = "../../vendor/bitvec" }
+funty = { path = "../../vendor/funty" }
