--- a/crates/icn_api/Cargo.toml
+++ b/crates/icn_api/Cargo.toml
@@ -20,4 +20,6 @@ log = "0.4"
 thiserror = "1.0"
 
 [dev-dependencies]
-tokio-test = "0.4"
+[dev-dependencies]
+tokio = { version = "1.0", features = ["full", "test-util"] }
+uuid = { version = "0.8", features = ["v4"] }
