--- a/crates/icn_api/Cargo.toml
+++ b/crates/icn_api/Cargo.toml
@@ -1,25 +1,14 @@
 [package]
 name = "icn_api"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
 
 [dependencies]
-icn_common = { path = "../icn_common" }
-icn_blockchain = { path = "../icn_blockchain" }
-icn_consensus = { path = "../icn_consensus" }
-icn_currency = { path = "../icn_currency" }
-icn_governance = { path = "../icn_governance" }
-icn_identity = { path = "../icn_identity" }
-icn_network = { path = "../icn_network" }
-icn_sharding = { path = "../icn_sharding" }
-icn_storage = { path = "../icn_storage" }
-icn_vm = { path = "../icn_vm" }
+warp = "0.3"
+tokio = { version = "1", features = ["full"] }
+icn_core = { path = "../icn_core" }
 serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1.0", features = ["full"] }
-log = "0.4"
-thiserror = "1.0"
+serde_json = "1.0"
 
 [dev-dependencies]
-[dev-dependencies]
 tokio = { version = "1.0", features = ["full", "test-util"] }
-uuid = { version = "0.8", features = ["v4"] }
