--- a/crates/icn_zkp/Cargo.toml
+++ b/crates/icn_zkp/Cargo.toml
@@ -4,11 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bellman = "0.11.1"
+bellman = "0.11.0" # Trying an earlier version to avoid conflicts
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
 ed25519-dalek = "1.0"
 rand = "0.8"
-bitvec = { path = "../../vendor/bitvec" }
-
-funty = { path = "../../vendor/funty" }
+icn_common = { path = "../icn_common" }
