--- a/crates/icn_common/Cargo.toml
+++ b/crates/icn_common/Cargo.toml
@@ -1,5 +1,3 @@
-# /crates/icn_common/Cargo.toml
-
 [package]
 name = "icn_common"
 version = "0.1.0"
@@ -15,6 +13,9 @@ rand = "0.8"
 rand_chacha = "0.3"
 ed25519-dalek = "1.0"
 thiserror = "1.0"
+tokio = { version = "1.0", features = ["full"] }
+log = "0.4"
+uuid = "0.8"  # Add this if uuid is used
 
 [dev-dependencies]
 rand = "0.8"
