--- a/crates/icn_language/Cargo.toml
+++ b/crates/icn_language/Cargo.toml
@@ -10,6 +10,7 @@ nom = "7.1.0"
 serde = { workspace = true }
 thiserror = { workspace = true }
 log = { workspace = true }
+icn_vm = { path = "../icn_vm" }
 
 [dev-dependencies]
 env_logger = { workspace = true }
