--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,9 @@ members = [
     "crates/icn_reputation",
     "crates/icn_market",
     "crates/icn_incentives",
-    "crates/icn_language"
-, "icn_demo", "crates/icn_demo"]
+    "crates/icn_language",
+    "crates/icn_demo"  # Add this line
+]
 
 resolver = "2"
 
