--- a/crates/icn_common/Cargo.toml
+++ b/crates/icn_common/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Your Name <your.email@example.com>"]
 edition = "2018"
 
 [dependencies]
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.9"
@@ -15,7 +15,7 @@ ed25519-dalek = "1.0"
 thiserror = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
-uuid = "0.8"  # Add this if uuid is used
+uuid = "0.8"
 
 [dev-dependencies]
 rand = "0.8"
