Enter your commit message (end with an empty line): more errors

--- a/crates/icn_network/Cargo.toml
+++ b/crates/icn_network/Cargo.toml
@@ -9,6 +9,8 @@ serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 log = "0.4"
 thiserror = "1.0"
-
-[dev-dependencies]
 tokio = { version = "1.0", features = ["full"] }
+
+# If you still need `tokio` for dev-specific dependencies, you can keep it here as well
+#[dev-dependencies]
+#tokio = { version = "1.0", features = ["full"] }
