--- a/crates/icn_api/Cargo.toml
+++ b/crates/icn_api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 warp = "0.3"
 tokio = { version = "1", features = ["full"] }
 icn_core = { path = "../icn_core" }
+icn_common = { path = "../icn_common" }  # Ensure this line is present
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
