--- a/crates/icn_demo/Cargo.toml
+++ b/crates/icn_demo/Cargo.toml
@@ -6,4 +6,13 @@ edition = "2021"
 [dependencies]
 icn_core = { path = "../icn_core" }
 icn_common = { path = "../icn_common" }
+icn_blockchain = { path = "../icn_blockchain" }
+icn_consensus = { path = "../icn_consensus" }
+icn_currency = { path = "../icn_currency" }
+icn_governance = { path = "../icn_governance" }
+icn_identity = { path = "../icn_identity" }
+tokio = { version = "1.0", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.0", features = ["v4"] }
+log = "0.4"
+env_logger = "0.9"
