--- a/crates/icn_blockchain/Cargo.toml
+++ b/crates/icn_blockchain/Cargo.toml
@@ -10,6 +10,7 @@ chrono = { version = "0.4", features = ["serde"] }
 sha2 = "0.10"
 log = "0.4"
 thiserror = "1.0"
+serde_json = "1.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
