--- a/crates/icn_core/Cargo.toml
+++ b/crates/icn_core/Cargo.toml
@@ -1,5 +1,3 @@
-# File: /home/matt/InterCooperative-Network/crates/icn_core/Cargo.toml
-
 [package]
 name = "icn_core"
 version = "0.1.0"
@@ -15,11 +13,12 @@ icn_identity = { path = "../icn_identity" }
 icn_network = { path = "../icn_network" }
 icn_sharding = { path = "../icn_sharding" }
 icn_vm = { path = "../icn_vm" }
-icn_language = { path = "../icn_language" }  # Add this line
+icn_language = { path = "../icn_language" }
 tokio = { workspace = true }
 log = { workspace = true }
 thiserror = { workspace = true }
 chrono = { workspace = true }
+ed25519-dalek = "1.0" # Add this line
 
 [dev-dependencies]
 tokio-test = "0.4"
