--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 #github: [fahertym]
 patreon: InterCooperativeNetwork
-open_collective: intercooperative-network
+#open_collective: intercooperative-network
